<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.csulb.wecare.SignUpActivity"
    style="@style/AppTheme"
    android:background="@color/blur_white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dip"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:layout_weight="2"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginTop="15dip">
            <EditText
                android:id="@+id/signUpNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:hint="@string/signUpName"
                android:background="@color/lightGray"
                android:textSize="20sp"
                android:textColorHint="@android:color/darker_gray"
                android:inputType="textPersonName"
                android:padding="10dip"
                android:drawableStart="@drawable/name"
                android:drawablePadding="10dip"

                android:layout_marginBottom="10dip"/>

                <EditText
                    android:id="@+id/sigUpEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:background="@color/lightGray"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="10dip"
                    android:hint="@string/signUpEmail"
                    android:inputType="textEmailAddress"
                    android:padding="10dip"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="20sp" />

            <EditText
                android:id="@+id/sigUpPhoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGray"
                android:hint="@string/signUpPhone"
                android:layout_marginBottom="10dip"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:padding="10dip"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="10dip"/>

                <EditText
                    android:id="@+id/signUpPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:background="@color/lightGray"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="10dip"
                    android:hint="@string/signUpPassword"
                    android:inputType="numberPassword"
                    android:padding="10dip"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/signUpConfirmPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:background="@color/lightGray"
                    android:drawableStart="@drawable/confirm_password"
                    android:drawablePadding="10dip"
                    android:hint="@string/signUpConfirmPassword"
                    android:textColorHint="@android:color/darker_gray"
                    android:inputType="numberPassword"
                    android:padding="10dip"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/loginSignUpButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="@drawable/login_button_bg"
                    android:padding="10dip"
                    android:text="@string/signUpButton"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <ProgressBar
                android:id="@+id/signUpProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
        </LinearLayout>
 </RelativeLayout>
