<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.csulb.wecare.ForgotLoginActivity"
    android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:src="@mipmap/forgot_login_key"
                android:background="@drawable/forgot_login_bg" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/forgotLoginTitle"
                    android:gravity="center"
                    android:padding="10dip"
                    android:layout_margin="15dip"
                    android:singleLine="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:text="@string/forgotLoginSubTitle"
                    android:gravity="center"
                    android:padding="10dip"
                    android:layout_margin="10dip"/>
                <EditText
                    android:id="@+id/forgotLoginEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGray"
                    android:hint="@string/loginEmail"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:inputType="textEmailAddress"
                    android:padding="10dip"
                    android:layout_margin="15dip"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="10dip" />

                <Button
                    android:id="@+id/forgotLoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_button_bg"
                    android:text="@string/forgotLoginButton"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="10dip"
                    android:layout_margin="15dip"
                    android:layout_marginTop="10dip" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
