<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dip">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_launcher"
                        android:layout_weight="1"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="bottom">
                    <EditText
                        android:id="@+id/loginEmailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/lightGray"
                        android:drawableStart="@drawable/email"
                        android:drawablePadding="10dip"
                        android:hint="@string/loginEmail"
                        android:inputType="textEmailAddress"
                        android:padding="10dip"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="20sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dip"
                    android:background="@android:color/black"/>

                    <EditText
                        android:id="@+id/loginPasswordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/lightGray"
                        android:drawableStart="@drawable/password"
                        android:drawablePadding="10dip"
                        android:hint="@string/loginPassword"
                        android:inputType="numberPassword"
                        android:padding="10dip"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="20sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dip">
                        <Button
                            android:layout_weight="1"
                            android:id="@+id/loginButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/login_button_bg"
                            android:padding="10dip"
                            android:text="@string/loginButton"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                            <View
                                android:layout_width="5dip"
                                android:layout_height="0dip"/>
                        <Button
                            android:layout_weight="1"
                            android:id="@+id/loginSignUpButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/login_sign_up_button_bg"
                            android:padding="10dip"
                            android:text="@string/loginSignUpButton"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/loginForgotTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:text="@string/forgotLogin"
                    android:gravity="center"
                    android:clickable="true"
                    android:padding="10dip"
                    android:layout_margin="10dip"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dip">

                    <com.facebook.login.widget.LoginButton
                        android:layout_weight="1"
                        xmlns:facebook="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/loginFacebookButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/FacebookLoginButton"
                        android:gravity="center"
                        android:elevation="2dp" />

                    <View
                        android:layout_width="0dip"
                        android:layout_height="5dip"/>

                    <com.google.android.gms.common.SignInButton
                        android:gravity="center"
                        android:layout_weight="1"
                        android:id="@+id/loginGoogleButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dip"
                        android:background="@android:color/white" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

</ScrollView>